[gd_scene load_steps=3 format=3 uid="uid://ctihhvwyekgan"]

[ext_resource type="Script" path="res://cards/body.gd" id="1_rgd6n"]
[ext_resource type="Texture2D" uid="uid://cp65tsxy10wvk" path="res://icon.svg" id="2_5vcgj"]

[node name="Body" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rgd6n")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -5.0
offset_top = -7.0
offset_right = 14.0
offset_bottom = 15.0

[node name="Sprite2D" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -1.0
scale = Vector2(0.445312, 0.476563)
texture = ExtResource("2_5vcgj")

[node name="CostHolder" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -11.0
offset_top = -45.0
offset_right = 78.0
offset_bottom = -15.0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
